<resources>
    <string name="ayp_play_button">Play button</string>
    <string name="ayp_null_time">0:00</string>
    <string name="ayp_open_video_in_youtube">Open video in YouTube</string>
    <string name="ayp_full_screen_button">Full screen button</string>
    <string name="ayp_live">LIVE</string>
    <string name="ayp_custom_action_left">YouTube player Custom action left</string>
    <string name="ayp_custom_action_right">YouTube player custom action right</string>
    <string name="ayp_show_playlist">Show playlist</string>
    <string name="ayp_more_videos">More videos</string>
    <string name="ayp_save">Save to playlist</string>
    <string name="ayp_share">Share</string>
    <string name="ayp_lock_controls">Lock or unlock controls</string>
    <string name="ayp_like">Like</string>
    <string name="ayp_dislike">Dislike</string>
</resources>
