<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="48dp"
    android:gravity="center_vertical" android:orientation="horizontal">
    <ImageView android:id="@+id/save_button"
        android:layout_width="48dp" android:layout_height="48dp"
        android:layout_marginStart="0dp" android:padding="11dp"
        android:background="@drawable/ayp_action_outline" android:src="@drawable/ayp_ic_add_playlist"
        android:contentDescription="@string/ayp_save"
        android:clickable="true" android:focusable="true" />
    <ImageView android:id="@+id/share_button"
        android:layout_width="48dp" android:layout_height="48dp"
        android:layout_marginStart="16dp" android:padding="11dp"
        android:background="@drawable/ayp_action_outline" android:src="@drawable/ayp_ic_share"
        android:contentDescription="@string/ayp_share"
        android:clickable="true" android:focusable="true" />
    <ImageView android:id="@+id/like_button"
        android:layout_width="48dp" android:layout_height="48dp"
        android:layout_marginStart="16dp" android:padding="11dp"
        android:background="@drawable/ayp_action_outline" android:src="@drawable/ayp_ic_like"
        android:contentDescription="@string/ayp_like"
        android:clickable="true" android:focusable="true" />
    <TextView android:id="@+id/like_count"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginStart="10dp" android:maxLines="1"
        android:textSize="16sp" android:textColor="#FFFFFF" android:visibility="gone" />
    <ImageView android:id="@+id/dislike_button"
        android:layout_width="48dp" android:layout_height="48dp"
        android:layout_marginStart="16dp" android:padding="11dp"
        android:background="@drawable/ayp_action_outline" android:src="@drawable/ayp_ic_dislike"
        android:contentDescription="@string/ayp_dislike"
        android:clickable="true" android:focusable="true" />
</LinearLayout>
